--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,5 +37,5 @@ jobs:
                   pip install -U wheel
                   pip install -U setuptools
                   python -m pip install -U pip
-            - run: pip install tox
+            - run: pip install tox-uv
             - run: tox -e ${{ matrix.tox }}
