--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,7 @@ jobs:
             fail-fast: false
             matrix:
                 include:
+                    - { python: "3.14" }
                     - { python: "3.13" }
                     - { python: "3.12" }
                     - { python: "3.11" }
@@ -33,7 +34,7 @@ jobs:
             - uses: actions/setup-python@v5
               with:
                   python-version: ${{ matrix.python }}
-            - run: uv run --locked tox run -e ${{ matrix.tox || format('py{0}', matrix.python) }}
+            - run: uv run --group tox --locked tox run -e ${{ matrix.tox || format('py{0}', matrix.python) }}
     typing:
         runs-on: ubuntu-latest
         steps:
@@ -50,4 +51,4 @@ jobs:
               with:
                   path: ./.mypy_cache
                   key: mypy|${{ hashFiles('pyproject.toml') }}
-            - run: uv run --locked tox run -e typing
+            - run: uv run --group tox --locked tox run -e typing
