--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
                     - { python: "3.11", tox: "style" }
         steps:
             - uses: actions/checkout@v4
-            - uses: astral-sh/setup-uv@6
+            - uses: astral-sh/setup-uv@v6
               with:
                   enable-cache: true
                   prune-cache: false
@@ -39,7 +39,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - uses: astral-sh/setup-uv@6
+            - uses: astral-sh/setup-uv@v6
               with:
                   enable-cache: true
                   prune-cache: false
