--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
             fail-fast: false
             matrix:
                 include:
-                    - { python: "3.14" }
+                    - { python: "3.14.0-beta.1", tox: "3.14" }
                     - { python: "3.13" }
                     - { python: "3.12" }
                     - { python: "3.11" }
@@ -47,7 +47,7 @@ jobs:
               with:
                   python-version-file: "pyproject.toml"
             - name: cache mypy
-              uses: actions/cache@4
+              uses: actions/cache@v4
               with:
                   path: ./.mypy_cache
                   key: mypy|${{ hashFiles('pyproject.toml') }}
