Improve test coverage and tox

--- a/tox.toml
+++ b/tox.toml
@@ -23,10 +23,10 @@ commands = [
 ]
 
 [env.coverage]
-depends = ["py3.11", "py3.12", "py3.13"]
+depends = ["py3.11", "py3.12", "py3.13", "py3.14"]
 runner = "uv-venv-lock-runner"
 dependency_groups = ["tests"]
-commands = [["coverage", "report", "--fail-under=90", "--skip-covered"]]
+commands = [["coverage", "html"], ["coverage", "report", "--fail-under=90", "--skip-covered"]]
 
 [env.style]
 dependency_groups = []
